# Synapse_MCP

./: .gitignore  CLAUDE.md  README.md  mcp.json  package-lock.json  package.json  pyproject.toml  setup.sh  tsconfig.json
.claude/: project.md  system-design.md
.claude/routines/: backend_code.md  call_graph.md  code_review.md  db_schema.md  debugger.md  devops.md  docs_updater.md  frontend_code.md  project_tree.md  routes.md  routine_instructions.md  tasks.md  test_writer.md  ui_polish.md
mcp_server/: config.py  server.py
mcp_server/analyzers/: ast_parser.py  base.py  devops_analyzer.py  django_analyzer.py  fastapi_analyzer.py
mcp_server/graph/: builder.py
mcp_server/storage/: database.py
mcp_server/tools/: analyze.py  query.py  tracer_tool.py  ui_tool.py
mcp_server/tracer/: dynamic_tracer.py  trace_script.py
src/: config.ts  mcp.ts  server.ts
src/analyzer/: devops.ts  index.ts  python.ts  roles.ts
src/api/: routes.ts
src/graph/: builder.ts
src/storage/: database.ts
web_ui/: server.py
web_ui/api/: routes.py
web_ui/frontend/: index.html  package-lock.json  package.json  vite.config.ts
web_ui/frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
web_ui/frontend/src/arch/: DiagramCanvas.tsx  icons.tsx  types.ts
web_ui/frontend/src/components/: ArchitectWorkspace.tsx  CallGraph.tsx  DbSchema.tsx  DevopsView.tsx  DraggableTreeGraph.tsx  ExecutionDebugger.tsx  ProjectTree.tsx  RoutesView.tsx
web_ui/frontend/src/store/: useStore.ts
web_ui/frontend/src/types/: index.ts
